--- a/240728.html
+++ b/240728.html
@@ -5,25 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script>
+    
+    // i팩토리얼 (i!)은 1부터 i까지 정수의 곱을 의미합니다. 예를들어 5! = 5 * 4 * 3 * 2 * 1 = 120 입니다. 정수 n이 주어질 때 다음 조건을 만족하는 가장 큰 정수 i를 return 하도록 solution 함수를 완성해주세요.
 
     function solution(n) {
-        // 곱셈이므로 answer을 1로 초기 설정.
+        // 팩토리얼은 1부터 시작해서 값을 곱해나가기 때문에 초기값을 1로 설정.
         let answer = 1;
         // for 반복문으로 팩토리얼을 우선 구성. 
+        // i를 1부터 n까지 증가시키면서 팩토리얼 값을 계산.
         for(let i = 1; i <= n; i++) {
             answer = answer * i;        
 
             // 조건에 따르면, 최대로 될 수 있는게 3628800 이므로, 같을 수 있는 조건을 설정.
+            // 만약 현재 계산된 팩토리얼 값(answer)이 입력값 n과 같다면, i를 반환.
+            // 즉, n이 정확히 어떤 수의 팩토리얼 값인 경우를 찾는 것.
             if (answer === n) {
                 return i;
             }
 
             // answer 값이 n보다 커질경우, 바로 전의 i를 반환하여 조건에 맞는 i를 찾을 수 있게 함.
+            // 만약 현재 계산된 팩토리얼 값(answer)이 n보다 크다면, n은 어떤 수의 팩토리얼이 될 수 없음.
+            // 이 경우, 바로 이전 단계의 i값이 n을 넘기지 않는 최대의 수가 됨. 따라서 i-1을 반환.
             if (answer > n) {
                 return i-1;
             }
         }
     }
+
     </script>
 </head>
 <body>
